<resources>
    <string name="app_name">Trade Now</string>
    <string name="app_bar_app_name">Trade\nNow</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="str_user_name_hint">User Name</string>
    <string name="str_user_password">Password</string>
    <string name="str_user_forgot_password">Forgot password?</string>
    <string name="str_activity_forgot_password">Forgot Password</string>
    <string name="str_login_btn">Login</string>
    <string name="str_login_activity">New User Login</string>
    <string name="str_create_acc">Create Account</string>
    <string name="str_name">Name</string>
    <string name="user_name">User Name</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="phone">Phone Number</string>
    <string name="register">Register</string>
    <string name="resend_pass">Resend Password</string>
    <string name="str_cancel_btn">Cancel</string>
    <string name="str_update_btn">Update</string>
    <string name="action_edit_profile">Edit Profile</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="reset_pass">Reset Password</string>
    <string name="str_subscriber_login">Log in for subscribers</string>
    <string name="str_activity_subscriber_login">Subscriber Login</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="open_time">Open Time</string>
    <string name="close_time">Close Time</string>
    <string name="str_sl">Stop Loss</string>
    <string name="str_tp">Take Profit</string>
    <string name="my_profile">My Profile</string>
    <string name="trade_alert">Trade Alerts</string>
    <string name="str_size">Lot Size</string>
    <string name="trade_history">Trade History</string>
    <string name="action_notification">Notifications</string>
    <string name="updated_on">Updated On</string>
    <string name="demo_text">\tAt vero eos et accusamus et iusto odio dignissimos ducimus qui
        blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias
        excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui
        officia deserunt mollitia animi, id est laborum et dolorum fuga.\n Et harum quidem
        rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est
        eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus,
        omnis voluptas assumenda est, omnis dolor repellendus. \nTemporibus autem quibusdam et aut
        officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint
        et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut
        reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores
        repellat.</string>
    <string name="terms_and_condition">
        <![CDATA[<p><b><font color="#ff4d4d">Terms</font></b></p>

<p>By accessing this Mobile APP “Trade Now” created by FTC Solutions, you are agreeing to be bound by our Terms of Use, all applicable laws and regulations, and agree that you are responsible for compliance with any applicable local laws. If you do not agree with any of these terms, you are prohibited from using or accessing this Mobile APP. The materials, services and software contained in this Mobile APP are protected by applicable copyright, trade mark and service mark law.</p>
<p><font color="#ff4d4d"><b>1. Use License</font></b></p>
<p>•	Permission is granted to download “Trade Now” for personal and commercial use only. You may use the Mobile APP to assist in your business but you are not able to resell this Mobile APP in the market. This is the grant of a license and not a transfer of title.</p>
<p>•	Information and data in the Mobile APP is obtained from sources believed to be reliable, but accuracy is not guaranteed. Neither the information, nor any opinion expressed, constitutes a recommendation to purchase or sell a security, or to provide investment advice.</p>
<p>•	The Mobile APP may be non-functioning, malfunctioning or inaccessible for any reason, including, without limitation: (i) hardware issues and failures; (ii) network failures or no internet connectivity; (iii) software failures or programming errors; or (iv) periodic maintenance or repairs which FTC Solutions may undertake.</p>
<p>•	Stocks, Forex, Futures and Options Trading has large potential rewards, but also large potential risk. You must be aware of the risks and be willing to accept them in order to invest in the Futures Options and Currency markets. Don’t trade with money you can’t afford to loose. This Mobile APP is neither a solicitation nor an offer to BUY/SELL FX, Futures or Options. No representation is being made that any account will or is likely to achieve profits or loses similar to those discussed on “Trade Now”. THE PAST PERFORMANCE OF ANY TRADING SYSTEM OR METHODOLOGY IS NOT NECESSARILY INDICATIVE OF FUTURE RESULTS.</p>
<p>•	Hypothetical or Simulated performance results have certain limitations. Unlike an actual performance record, simulated results do not represent actual trading. Also, since the trades have not been executed, the results may have under-or-over compensated for the impact, if any, of certain markets factors, such as lack of liquidity. Simulated trading programs in general are also subject to the fact that they are designed with the benefit of hindsight. NO REPRESENTATION IS BEING MADE THAT ANY ACCOUNT WILL OR IS LIKELY TO ACHIEVE PROFIT OR LOSSES SIMILAR TO THOSE SHOWN IN THE MOBILE APP.</p>
<p>•	Subscribing to “Trade Now” which is a service provided by FTC Solutions constitutes acknowledgement of, acceptance of, and consent to: (i) the terms of these Terms of Use; (ii) the Purchase Policy (iii) the disclaimers of warranties, limitations and indemnification; (iv) acceptance of the terms of the Privacy Policy, thereby creating a privacy agreement; and (v) the indication of your electronic signature, thereby creating a valid and legally enforceable contract.</p>
<p>•	When you purchase a full license of our product there is no refund available due to the nature of this product as once you download the software product online you have complete access to our intellectual property including in some cases source codes.</p>
<p>•	We provide support for all our products and some of them come with user guides and video tutorials. Although we do provide 24x7 support we are not able to and do not guarantee a response to all queries within 24 hrs. We also provide professional support for non-technical customers at agreed additional cost. We are not responsible to teach all technical aspect of the product. Once a product is installed on your server and is successfully running we take no responsibility if it stops functioning due to issues with your hosting provider or other technical reasons that is deemed beyond our control.</p>
<p>•	This license shall automatically terminate if you violate any of these restrictions and may be terminated by FTC Solutions at any time. Upon terminating your viewing of these materials, use of the services or upon the termination of this license, you must destroy any downloaded materials or software in your possession whether in electronic or printed format.</p>
<p><b><font color="#ff4d4d">2. Disclaimer</font></b></p>
<p>The materials and services on “Trade Now” are provided “as is”. FTC Solutions makes no warranties, expressed or implied, and hereby disclaim and negate all other warranties, including without limitation, implied warranties or conditions of merchantability, fitness for a particular purpose, or non-infringement of intellectual property or other violation of rights. Further, “Trade Now” does not warrant or make any representations concerning the accuracy, likely results, or reliability of the use of the materials, services or software advertised in the APP or otherwise relating to such materials, services, software or any sites linked to this site.</p>
<p><b><font color="#ff4d4d">3. Limitations</font></b></p>
<p>In no event shall FTC Solutions or its clients be liable for any direct, indirect, punitive, incidental, special, or consequential damages (including, without limitation, damages for loss of capital or profit) arising out of the use of or inability to use the materials, services or software on “Trade Now”, even if FTC Solutions has been notified orally or in writing of the possibility of such damage. Because some jurisdictions do not allow the exclusion or limitation of incidental or consequential damages, FTC Solutions liability in such jurisdictions shall be limited to the maximum extent permitted by law of your jurisdiction.</p>
<p><b><font color="#ff4d4d">4. Indemnification</font></b></p>
<p>You agree to defend, indemnify, and hold harmless FTC Solutions its owners, clients, and their employees, contractors, officers, agents and directors from all liabilities, claims, and expenses, including attorney’s fees, that arise from your use of this site, any services, software or any information from this site, or any violation of this Agreement.</p>
<p>FTC Solutions reserves the right, at its own expense, to assume the exclusive defence and control of any matter otherwise subject to indemnification by you, in which event you shall cooperate with FTC Solutions in asserting any available defences.</p>
<p><b><font color="#ff4d4d">5. Revisions and Errata</font></b></p>
<p>The materials appearing on “Trade Now” could include technical, typographical, or photographic errors. FTC Solutions does not warrant that any of the materials on the Mobile APP are accurate, complete, or current. The subscribers of “Trade Now” may make changes to some of the materials contained on the APP at any time without notice. FTC Solutions does not, however, make any commitment to update the materials.</p>
<p><b><font color="#ff4d4d">6. Links</font></b></p>
<p>FTC Solutions has not reviewed all of the sites linked to “Trade Now” and is not responsible for the contents of any such linked site. The inclusion of any link does not imply endorsement by FTC Solution or its’ subscribers of the site. Use of any such linked web site is at the user’s own discretion and risk.</p>
<p><b><font color="#ff4d4d">7. Site Terms of Use Modifications</font></b></p>
<p>FTC Solutions may revise these terms of use for its Mobile APP “Trade Now” at any time without notice. By using this Mobile APP you are agreeing to be bound by the then current version of these Terms of Use.</p>
]]></string>
    <string name="demo_activity">Demo View</string>
    <string name="not_register">New to trade now?</string>
    <string name="str_mob_no">Mobile Number</string>
    <string name="str_agency_name">Company Name</string>
    <string name="nav_str_my_profile">My Profile</string>
    <string name="str_change_pass">Change Password</string>
    <string name="nav_demo_view">Demo Views</string>
    <string name="str_profit_n_loss">Profit n Loss</string>
    <string name="str_profit_n_loss_in_pips">P/L in pips</string>
    <string name="view_all">View Details</string>
    <string name="subscriber_id">Subscription Id</string>
    <string name="nav_str_log_out">Log Out</string>
    <string name="privacy_text_check"><![CDATA[ I have read and agree to the
    <font color="#23E763">Terms and Conditions</font> of Trade Now ]]></string>
    <string name="terms_n_condition">Terms And Conditions</string>
    <string name="trade_alert_details">Trade Alert Details</string>
    <string name="trade_history_details">Trade History Details</string>
    <string name="str_close_price">Close Price</string>
    <string name="open_price">Open Price</string>
</resources>