<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="4dp"
        card_view:cardCornerRadius="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="6dp"
                    android:text="INR TO USD"
                    android:textColor="@color/primaryText"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/txtBuyOrSell"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="left"
                    android:padding="6dp"
                    android:text="Buy / Sale"
                    android:textColor="@android:color/black"
                    android:textSize="17sp" />
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginBottom="6dp"
                android:background="@color/colorPrimaryDark" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/txtTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="1dp"
                        android:text="09:30 AM"
                        android:textColor="@color/secondaryText"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:text="@string/open_time"
                        android:textColor="@color/secondaryText"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/txtSL"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="1dp"
                        android:text="0.84975"
                        android:textColor="@color/secondaryText"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:text="@string/str_sl"
                        android:textColor="@color/secondaryText"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/txtOpenPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="1dp"
                        android:text="0.83775"
                        android:textColor="@color/secondaryText"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="0dp"
                        android:text="@string/open_price"
                        android:textColor="@color/secondaryText"
                        android:textSize="12sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="12dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtCloseTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="1dp"
                        android:text="03:00 PM"
                        android:textColor="@color/secondaryText"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:text="@string/close_time"
                        android:textColor="@color/secondaryText"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/txtTP"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="1dp"
                        android:text="0.85725"
                        android:textColor="@color/secondaryText"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:text="@string/str_tp"
                        android:textColor="@color/secondaryText"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/txtClosePrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="1dp"
                        android:text="0.84975"
                        android:textColor="@color/secondaryText"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="0dp"
                        android:text="@string/str_close_price"
                        android:textColor="@color/secondaryText"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="12dp"
                        android:padding="1dp"
                        android:text="0.84875"
                        android:textColor="@color/primaryText"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:text="@string/str_price"
                        android:textColor="@color/secondaryText"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/txtLotSize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="1dp"
                        android:text="0.8734"
                        android:textColor="@color/secondaryText"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="4dp"
                        android:text="@string/str_profit_n_loss_in_pips"
                        android:textColor="@color/secondaryText"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="6dp"
                android:background="@color/colorPrimaryDark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <!--<TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:text="@string/updated_on"
                    android:textColor="@color/secondaryText"
                    android:textSize="12sp" />-->
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:src="@drawable/ic_query_builder_black_24dp" />

                <TextView
                    android:id="@+id/txtDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:text="20 Jun 2016 03:00 PM"
                    android:textColor="@color/secondaryText"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txtViewAll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:padding="6dp"
                    android:text="@string/view_all"
                    android:textColor="@color/hyperlink_color"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>