<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainResetPassView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_login"
    tools:context="com.ftcsolutions.tradenow.activities.ResetPassActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:background="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/formView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <!--   <ImageView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:src="@drawable/ic_person_black_24dp" />-->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_marginLeft="15dp"
                        android:gravity="center_vertical"
                        android:text="@string/old_password"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="12sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginLeft="5dp"
                        android:background="@color/colorPrimaryDark" />

                    <EditText
                        android:id="@+id/txtOldPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="10dp"
                        android:enabled="true"
                        android:gravity="center_vertical"
                        android:hint="@string/old_password"
                        android:inputType="textPassword"
                        android:textColor="@color/secondaryText"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <!--   <ImageView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:src="@drawable/ic_person_black_24dp" />-->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_marginLeft="15dp"
                        android:gravity="center_vertical"
                        android:text="@string/new_password"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="12sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginLeft="5dp"
                        android:background="@color/colorPrimaryDark" />

                    <EditText
                        android:id="@+id/txtNewPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="10dp"
                        android:enabled="true"
                        android:gravity="center_vertical"
                        android:hint="@string/new_password"
                        android:inputType="textPassword"
                        android:textColor="@color/secondaryText"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <!--   <ImageView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:src="@drawable/ic_person_black_24dp" />-->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_marginLeft="15dp"
                        android:gravity="center_vertical"
                        android:text="@string/confirm_pass"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="12sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginLeft="5dp"
                        android:background="@color/colorPrimaryDark" />

                    <EditText
                        android:id="@+id/txtConfirmPass"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="10dp"
                        android:enabled="true"
                        android:gravity="center_vertical"
                        android:hint="@string/confirm_pass"
                        android:inputType="textPassword"
                        android:textColor="@color/secondaryText"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <!--   <ImageView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:src="@drawable/ic_person_black_24dp" />-->
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <!--   <ImageView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:src="@drawable/ic_person_black_24dp" />-->
                    <Button
                        android:id="@+id/btnCancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_custom_disable"
                        android:text="@string/str_cancel_btn"
                        android:textColor="@android:color/white"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/btnUpdate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_custom"
                        android:text="@string/str_update_btn"
                        android:textColor="@android:color/white"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
